--- a/roy-gimme-an-advice/src/App.css
+++ b/roy-gimme-an-advice/src/App.css
@@ -7,8 +7,8 @@
 }
 
 header {
-  background-color: orange;
-  color: black;
+  background-color: #0000ff;
+  color: #ffff00;
   grid-column: 1 / span 2;
   grid-row: 1 / 2;
   display: flex;
@@ -17,8 +17,9 @@ header {
   /*min-width: 50px and max-width: 2560px 
   minimum font-size: 12.5px and maximum font-size: 90px*/
   font-size: clamp(0.78125rem, 0.6848rem + 3.0876vw, 5.625rem);
-  font-weight: bold;
-  border: 1px solid black
+  font-weight: 400;
+  text-shadow: -3px 3px 0px rgba(0, 0, 0, 0.99);
+  border: 2px solid #000000
 }
 
 .TopHomeImg {
@@ -27,32 +28,81 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black
+  border-right: 2px solid #000000;
+  border-left: 2px solid #000000
 }
 
 .Sunrise {
   height: 100%;
   width: 100%;
-  object-fit: cover;
-  border: 1px solid black
+  object-fit: cover
 }
 
 main {
-  background-color: lightgreen;
   grid-column: 1 / span 2;
   grid-row: 4 / 7;
-  border: 1px solid black
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  border-right: 2px solid #000000;
+  border-left: 2px solid #000000
+}
+
+.ContainerButton {
+  background-color: #0000ff;
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+  border-top: 2px solid #000000;
+  border-bottom: 2px solid #000000
+}
+
+.ContainerBubble {
+  background-color: orange;
+  grid-column: 1 / 4;
+  grid-row: 2 / 4;
+  border-bottom: 2px solid #000000;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding-right: 5%
+}
+
+.Bubble
+{
+  position: relative;
+  width: 70%;
+  height: 60%;
+  background: #ffffff;
+  -webkit-border-radius: 2vmin;
+  -moz-border-radius: 2vmin;
+  border-radius: 2vmin;
+  border: 2px solid #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center
 }
 
 .BottomHomeImg {
   grid-column: 1 / span 2;
   grid-row: 7 / 10;
-  border: 1px solid black
+  border-bottom: 2px solid #000000;
+  border-right: 2px solid #000000;
+  border-left: 2px solid #000000
+}
+
+.CryingGirl {
+  height: 100%;
+  width: 100%;
+  object-fit: cover
 }
 
 footer {
+  grid-column: 1 / span 2;
   grid-row: 10 / 11;
-  border: 1px solid black
+  border-bottom: 2px solid #000000;
+  border-right: 2px solid #000000;
+  border-left: 2px solid #000000
 }
 
 /* Smaller smartphones - 0-480px */
